Added more Gulp and Bourbon/neat

--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+  <link rel="stylesheet" href="stylesheets/css/styles.css">
 </head>
 <body>
-  Hello World!
+  <div class="test"><h1> Hello World!</h1></div>
 </body>
 </html>
