--- a/app/login.html
+++ b/app/login.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link href="./site.css" rel="stylesheet">
-    <link rel="stylesheet" href="../stylesheets/css/styles.css.sass">
+
+    <link rel="stylesheet" href="stylesheets/css/login.css">
 
 </head>
 <body>
@@ -11,7 +11,7 @@
 
 <div class="container">
     <div class='login-panel'>
-        <a class='login btn-success' href="/authentication">
+        <a class='login btn-success' href="/oauth">
             Login with Evernote
         </a>
     </div>
@@ -33,7 +33,7 @@
 
 <!-- SCRIPTS ------------------------------->
 
-<script src="../scripts/login.js"></script>
+
 
 </body>
 </html>
