--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/css/styles.css">
 </head>
-<body ng-controller="login">
-  <div class="test"><h1>{{test}}</h1></div>
+
+
+
+
+<body ng-app="evervoiceApp" ng-controller="myCtrl">
+
+
+  <div class="textarea1">
+    EverVoice
+  </div>
+
+  <div class="textarea2">
+    <textarea class="speech-box" ng-model="interimTranscript" autofocus></textarea>
+    <div class="subtext">
+      Talk and send to Evernote!
+    </div>
+    <div class="text-buttons">
+      <button class="button1" ng-click="dictate()">Dictate</button>
+      <button class="button2" ng-click="createNote()">Evernote</button>
+    </div>
+
+  </div>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
