--- a/app/login.html
+++ b/app/login.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-
+    <title></title>
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="stylesheets/css/login.css">
 
 </head>
@@ -16,12 +17,6 @@
         </a>
     </div>
 
-    <div class="description">
-        <p>This demo website of <a href="http://nodejs.org">Node.js</a> application using <a href="http://dev.evernote.com/documentation/reference/">Evernote API</a>. The source code of this website is available on <a href="https://github.com/berryboy/everest-js">Github</a>.</p>
-
-    </div>
-
-</div>
 
 <div class="bottom-container">
     <footer>
