added other files to test code

--- a/app/login.html
+++ b/app/login.html
@@ -10,9 +10,9 @@
 <body>
 
 
-<div class="container">
+<div class="container" ng-app="evervoiceApp">
     <div class='login-panel'>
-        <a class='login btn-success' href="/oauth">
+        <a class='login btn-success'  href="/oauth">
             Login with Evernote
         </a>
     </div>
