Added AngularJS, createNoteJS, and messed around with files in ExpressJS. Still need to hook up stuff.

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="textarea2">
-    <textarea class="speech-box" ng-model="interimTranscript" autofocus></textarea>
+    <textarea class="speech-box" name="content" ng-model="interimTranscript" autofocus></textarea>
     <div class="subtext">
       Talk and send to Evernote!
     </div>
