--- a/app/index.html
+++ b/app/index.html
@@ -17,21 +17,21 @@
     EverVoice
   </div>
 
-  <div class="textarea2">
-    <textarea class="speech-box" name="content" ng-model="interimTranscript" autofocus></textarea>
-    <div class="subtext">
-      Talk and send to Evernote!
-    </div>
-    <div class="text-buttons">
-      <button class="button1" ng-click="dictate()">Dictate</button>
-      <button class="button2" ng-click="createNote()">Evernote</button>
+    <div class="textarea2">
+      <textarea class="speech-box" name="content" ng-model="interimTranscript" autofocus></textarea>
+      <div class="subtext">
+        Talk and send to Evernote!
+      </div>
+      <div class="text-buttons">
+        <button class="button1" ng-click="dictate()">Dictate</button>
+        <button class="button2" ng-click="createNote()">Evernote</button>
+      </div>
     </div>
 
-  </div>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.min.js"></script>
-  <script src="scripts/app.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
