--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,8 @@
   <link href='http://fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/css/styles.css">
 </head>
-
-
-
-
 <body ng-app="evervoiceApp" ng-controller="myCtrl">
-
-
-  <div class="textarea1">
+<div class="textarea1">
     EverVoice
   </div>
 
@@ -28,7 +22,7 @@
       </div>
     </div>
 
-
+<!-------------------SCRIPTS------------------------------->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.min.js"></script>
