--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <link href='http://fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/css/styles.css">
 </head>
 <body ng-app="evervoiceApp" ng-controller="myCtrl">
