added some magic to the login page

--- a/app/login.html
+++ b/app/login.html
@@ -8,12 +8,19 @@
 
 </head>
 <body>
-<div class="container" ng-app="evervoiceApp">
-    <div class='login-panel'>
-        <a class='login btn-success'  href="/oauth">
-            Login with Evernote
-        </a>
+
+<div id="particles-js">
+
+    <div class="container" ng-app="evervoiceApp">
+        <div class='login-panel'>
+            <a class='login btn-success'  href="/oauth">
+                Login with Evernote
+            </a>
+        </div>
     </div>
 </div>
+<script src="scripts/particles.js"></script>
+<script src="scripts/particles-script.js"></script>
+
 </body>
 </html>
