--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
   <title></title>
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="stylesheets/css/styles.css">
 </head>
 <body ng-app="evervoiceApp" ng-controller="myCtrl">
+
 <div class="textarea1">
     EverVoice
   </div>
-
     <div class="textarea2">
       <textarea class="speech-box" name="content" ng-model="interimTranscript" autofocus></textarea>
       <div class="subtext">
