styling login page

--- a/app/login.html
+++ b/app/login.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title></title>
-    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <title>EverVoice</title>
+    <link href='//fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="stylesheets/css/login.css">
 
 </head>
@@ -11,10 +11,14 @@
 
 <div id="particles-js">
 
+    <div class="login-title">
+        Welcome to EverVoice
+    </div>
+
     <div class="container" ng-app="evervoiceApp">
         <div class='login-panel'>
             <a class='login btn-success'  href="/oauth">
-                Login with Evernote
+                Login
             </a>
         </div>
     </div>
