--- a/app/login.html
+++ b/app/login.html
@@ -16,14 +16,12 @@
         Welcome to EverVoice
     </div>
 
-    <div class="login-panel">
-        <a href="/oauth">Enter</a>
-    </div>
+    <a href="/oauth"><div class="login-panel">Enter</div></a>
 
 </div>
 
-<script src="scripts/particles.js"></script>
-<script src="scripts/particles-script.js"></script>
+<footer></footer>
+
 
 </body>
 </html>
