--- a/app/index.html
+++ b/app/index.html
@@ -14,11 +14,11 @@
     <div class="textarea2">
       <textarea class="speech-box" name="content" ng-model="interimTranscript" autofocus></textarea>
       <div class="subtext">
-        Talk and send to Evernote!
+        Just talk and send to Evernote!
       </div>
       <div class="text-buttons">
-        <button class="button1" ng-click="dictate()">Dictate</button>
-        <button class="button2" ng-click="createNote()">Evernote</button>
+        <div class="button1" ng-click="dictate()">Dictate</div>
+        <div class="button2" ng-click="createNote()">Evernote</div>
       </div>
     </div>
 
