added license to readme

--- a/app/login.html
+++ b/app/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>EverVoice</title>
     <link href='//fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
-
+    <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css">
     <link rel="stylesheet" href="stylesheets/css/login.css">
 
 </head>
@@ -19,8 +19,13 @@
     <a href="/oauth"><div class="login-panel">Enter</div></a>
 
 </div>
-<footer></footer>
 
+<!-------------------SCRIPTS------------------------------->
+<script src="../bower_components/angular/angular.js"></script>
+<script src="../bower_components/angular-aria/angular-aria.js"></script>
+<script src="../bower_components/angular-animate/angular-animate.js"></script>
+<script src="../bower_components/hammerjs/hammer.js"></script>
+<script src="../bower_components/angular-material/angular-material.js"></script>
 
 </body>
 </html>
