--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title></title>
   <link href='//fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css">
   <link rel="stylesheet" href="stylesheets/css/styles.css">
 </head>
 <body ng-app="evervoiceApp" ng-controller="myCtrl">
@@ -23,8 +24,11 @@
     </div>
 
 <!-------------------SCRIPTS------------------------------->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.min.js"></script>
+  <script src="../bower_components/angular/angular.js"></script>
+  <script src="../bower_components/angular-aria/angular-aria.js"></script>
+  <script src="../bower_components/angular-animate/angular-animate.js"></script>
+  <script src="../bower_components/hammerjs/hammer.js"></script>
+  <script src="../bower_components/angular-material/angular-material.js"></script>
   <script src="scripts/script.js"></script>
 </body>
 </html>
