--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,10 @@
   <title></title>
   <link href='//fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css">
+  <link rel="stylesheet" href="stylesheets/css/md-theme.css">
   <link rel="stylesheet" href="stylesheets/css/styles.css">
 </head>
-<body ng-app="evervoiceApp" ng-controller="myCtrl">
+<body ng-app="evervoiceApp" ng-controller="myCtrl" md-theme="md-theme">
 
 <div class="textarea1">
     EverVoice
@@ -18,8 +19,8 @@
         Just talk and send to Evernote!
       </div>
       <div class="text-buttons">
-        <div class="button1" ng-click="dictate()">Dictate</div>
-        <div class="button2" ng-click="createNote()">Evernote</div>
+        <md-button class="md-raised button1" ng-click="dictate()">Dictate</md-button>
+        <md-button class="md-raised button2" ng-click="createNote()">Evernote</md-button>
       </div>
     </div>
 
