--- a/app/login.html
+++ b/app/login.html
@@ -5,10 +5,11 @@
     <title>EverVoice</title>
     <link href='//fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css">
+    <link rel="stylesheet" href="stylesheets/css/md-theme.css">
     <link rel="stylesheet" href="stylesheets/css/login.css">
 
 </head>
-<body>
+<body ng-app="evervoiceApp" md-theme="md-theme">
 <a href="https://github.com/AbdullahAlger/Angular-Evernote"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
 <div id="particles-js">
 
@@ -16,7 +17,7 @@
         Welcome to EverVoice
     </div>
 
-    <a href="/oauth"><div class="login-panel">Enter</div></a>
+    <a href="/oauth"><md-button class="md-raised login-panel">Enter</md-button></a>
 
 </div>
 
@@ -26,6 +27,7 @@
 <script src="../bower_components/angular-animate/angular-animate.js"></script>
 <script src="../bower_components/hammerjs/hammer.js"></script>
 <script src="../bower_components/angular-material/angular-material.js"></script>
+<script src="scripts/script.js"></script>
 
 </body>
 </html>
