--- a/app/index.html
+++ b/app/index.html
@@ -8,21 +8,48 @@
   <link rel="stylesheet" href="stylesheets/css/md-theme.css">
   <link rel="stylesheet" href="stylesheets/css/styles.css">
 </head>
+
 <body ng-app="evervoiceApp" ng-controller="myCtrl" md-theme="md-theme">
 
-<div class="textarea1">
+<div>
+  <md-whiteframe class="md-whiteframe-z1" layout layout-align="center center"></md-whiteframe>
+</div>
+
+<div class="heading">
     EverVoice
-  </div>
-    <div class="textarea2">
+</div>
+    <div class="text-box">
+
       <textarea class="speech-box" name="content" ng-model="interimTranscript" autofocus></textarea>
+    </div>
+
+    <div class="sub">
       <div class="subtext">
         Just talk and send to Evernote!
       </div>
-      <div class="text-buttons">
-        <md-button class="md-raised button1" ng-click="dictate()">Dictate</md-button>
-        <md-button class="md-raised button2" ng-click="createNote()">Evernote</md-button>
-      </div>
     </div>
+
+      <div class="text-buttons">
+        <div class="button1">
+            <md-button class="md-raised button"  ng-click="dictate()">Record</md-button>
+        </div>
+        <div class="button2">
+            <md-button class="md-raised button" ng-click="createNote()">Evernote</md-button>
+        </div>
+      </div>
+
+<div class="response">
+  <div class="message" ng-model="message">
+    <span>{{message}}</span>
+  </div>
+</div>
+
+
+
+
+
+
+
 
 <!-------------------SCRIPTS------------------------------->
   <script src="../bower_components/angular/angular.js"></script>
