--- a/app/login.html
+++ b/app/login.html
@@ -29,11 +29,11 @@
 
 
 <!-------------------SCRIPTS------------------------------->
-<script src="../bower_components/angular/angular.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
 <script src="../bower_components/angular-aria/angular-aria.js"></script>
 <script src="../bower_components/angular-animate/angular-animate.js"></script>
 <script src="../bower_components/hammerjs/hammer.js"></script>
-<script src="../bower_components/angular-material/angular-material.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angular_material/0.6/angular-material.min.js"></script>
 <script src="scripts/script.js"></script>
 
 </body>
