--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title></title>
   <link href='//fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css">
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
   <link rel="stylesheet" href="stylesheets/css/md-theme.css">
   <link rel="stylesheet" href="stylesheets/css/styles.css">
 </head>
@@ -46,11 +46,11 @@
 
 
 <!-------------------SCRIPTS------------------------------->
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
-  <script src="../bower_components/angular-aria/angular-aria.js"></script>
-  <script src="../bower_components/angular-animate/angular-animate.js"></script>
-  <script src="../bower_components/hammerjs/hammer.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angular_material/0.6/angular-material.min.js"></script>
+ <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>>
   <script src="scripts/script.js"></script>
 </body>
 </html>
