--- a/app/login.html
+++ b/app/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>EverVoice</title>
     <link href='//fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css">
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
     <link rel="stylesheet" href="stylesheets/css/md-theme.css">
     <link rel="stylesheet" href="stylesheets/css/login.css">
 
@@ -13,7 +13,7 @@
 <div>
     <md-whiteframe class="md-whiteframe-z1" layout layout-align="center center"></md-whiteframe>
 </div>
-<a href="https://github.com/AbdullahAlger/Angular-Evernote"><img style=" position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
+<a href="https://github.com/ajalger/Angular-Evernote"><img style=" position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
 
 
     <div class="login-text">
@@ -29,11 +29,11 @@
 
 
 <!-------------------SCRIPTS------------------------------->
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
-<script src="../bower_components/angular-aria/angular-aria.js"></script>
-<script src="../bower_components/angular-animate/angular-animate.js"></script>
-<script src="../bower_components/hammerjs/hammer.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angular_material/0.6/angular-material.min.js"></script>
+ <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script src="scripts/script.js"></script>
 
 </body>
